# PigNote

./: .gitignore  README.md  angular.json  package-lock.json  package.json  tsconfig.json  tsconfig.spec.json
.github/workflows/: release.yml
src/: index.html  styles.scss
src-tauri/: Cargo.toml  deneme1.html  deneme111.html  deneme122.html  deneme13.html  deneme1564.html  export.html  tauri.conf.json  yeni2sdgh.html
src-tauri/src/: lib.rs
src/app/: app.config.ts  app.html  app.scss  app.ts
src/app/components/context-menu/: context-menu.component.ts
src/app/components/delete-file-dialog/: delete-file-dialog.component.ts
src/app/components/export-dialog/: export-dialog.component.ts
src/app/components/file-explorer/: file-explorer.component.scss  file-explorer.component.ts
src/app/components/new-file-dialog/: new-file-dialog.component.ts
src/app/components/new-folder-dialog/: new-folder-dialog.component.ts
src/app/components/notification/: notification.component.ts
src/app/components/rename-dialog/: rename-dialog.component.ts
src/app/components/settings-dialog/: settings-dialog.component.scss  settings-dialog.component.ts
src/app/editor/: editor.component.html  editor.component.scss  editor.component.ts
src/app/services/: file.service.ts  portal.service.ts
src/types/: monaco.d.ts
